
  touch's --file option is no longer recognized.  Use --reference=F (-r)
  instead.  --file has not been documented for 15 years, and its use has
  elicited a warning since coreutils-7.1.

  truncate now supports setting file sizes relative to a reference file.
  Also errors are no longer suppressed for unsupported file types, and
  relative sizes are restricted to supported file types.


* Noteworthy changes in release 8.5 (2010-04-23) [stable]

** Bug fixes

  cp and mv once again support preserving extended attributes.
  [bug introduced in coreutils-8.4]

  cp now preserves "capabilities" when also preserving file ownership.

  ls --color once again honors the 'NORMAL' dircolors directive.
  [bug introduced in coreutils-6.11]

  sort -M now handles abbreviated months that are aligned using blanks
  in the locale database.  Also locales with 8 bit characters are
  handled correctly, including multi byte locales with the caveat
  that multi byte characters are matched case sensitively.

  sort again handles obsolescent key formats (+POS -POS) correctly.
  Previously if -POS was specified, 1 field too many was used in the sort.
  [bug introduced in coreutils-7.2]

** New features

  join now accepts the --header option, to treat the first line of each
  file as a header line to be joined and printed unconditionally.

  timeout now accepts the --kill-after option which sends a kill
  signal to the monitored command if it's still running the specified
  duration after the initial signal was sent.

  who: the "+/-" --mesg (-T) indicator of whether a user/tty is accepting
  messages could be incorrectly listed as "+", when in fact, the user was
  not accepting messages (mesg no).  Before, who would examine only the
  permission bits, and not consider the group of the TTY device file.
  Thus, if a login tty's group would change somehow e.g., to "root",
  that would make it unwritable (via write(1)) by normal users, in spite